fix scrollbar, fix explosion

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -117,6 +117,12 @@ a.deleteLink:visited {
   to   { opacity: 0; }
 }
 
+body {overflow-x:hidden;}
+
+.explode {
+  width:200vw;
+  animation:letter_explode 1s 5s forwards;
+}
 @keyframes letter_explode {
     0% {letter-spacing:0.1em;opacity:1;}
     100% {letter-spacing:1em;opacity:0;}
